tests/typing/bad/testfile-const-1.rs


const T : usize = 1i32;


fn main() {
    
}